Fix collapse menu styles

--- a/app/assets/stylesheets/module-admin.scss
+++ b/app/assets/stylesheets/module-admin.scss
@@ -179,7 +179,6 @@ menu.main {
   .menu_content,
   .collapse_menu span {
     visibility: visible;
-    overflow: hidden;
   }
 
   .collapse_menu {
